[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "astra-stack"
version = "0.0.2"
description = "Astra - agent framework, CLI, and swarm orchestration"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
dependencies = [
    "astra-node",
    "astra-cli",
    "astra-swarm",
]

[tool.hatch.build.targets.wheel]
packages = ["astra"]

[tool.hatch.build.targets.sdist]
include = ["astra/**", "README.md", "pyproject.toml"]